examples/errors/class_private_virtual/main.lc

class Base {

  private virtual f() {
    print("base");
  }

}

function main() {
  const child = Base{};
  child.f();
}
